# runner

./: ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  README.md  USAGE.md  example_config.toml
src/: config.rs  executor.rs  main.rs  matcher.rs  model.rs  state.rs
src/sources/: bin.rs  desktop.rs  history.rs  mod.rs  scripts.rs
src/ui/: icons.rs  mod.rs  render.rs  wayland.rs
