[package]
name = "runner"
version = "0.1.0"
edition = "2024"

[dependencies]
# Config & Data
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Wayland & UI
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
calloop = "0.13"
calloop-wayland-source = "0.3.0"

# Rendering
tiny-skia = "0.11"
cosmic-text = "0.12"
memmap2 = "0.9"

# Fuzzy Matching
nucleo-matcher = "0.3"

# System
nix = { version = "0.29", features = ["process", "signal"] }
anyhow = "1.0"
xkbcommon = "0.9.0"
image = { version = "0.25.9", features = ["png", "jpeg", "ico"] }
resvg = "0.46.0"
walkdir = "2.5.0"
regex = "1.12.3"
serde_json = "1.0.149"
